# errpilot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  artifact_reproduction.md  ase26_terminal_demo.md  container_reproduction.md  demo_script.md  error_bundle_schema.md  evaluation.md  evaluation_matrix.md  local_development_workflow.md  paper_claims.md  positioning_vs_existing_tools.md  security_model.md  severity_rubric.md
errpilot/: bundler.py  cli.py  runner.py  source_context.py  storage.py
errpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
errpilot/parsers/: pytest.py  python_traceback.py
errpilot/router/: handoff.py
errpilot/triage/: local.py
evaluation/: cases.csv  results.csv
evaluation/cross_project_vignette/: README.md
evaluation/handoff_probe/: results.csv
evaluation/raw-notes/: skiloadlab_candidates.md  slsa_verifier_candidates.md
examples/missing_config_failure/: README.md  test_missing_config.py
examples/pytest_fixture_failure/: README.md  test_fixture.py
paper/: README.md  main.tex
scripts/: ase26_terminal_demo.sh  check_artifact.py  demo_bundle_view.py  demo_triage_summary.py  demo_triage_view.py  demo_walkthrough_view.py  evaluate_cases.py  evaluate_handoff_probe.py  summarize_evaluation.py
tests/: test_bundler.py  test_check_artifact.py  test_evaluate_cases.py  test_pytest_parser.py  test_python_traceback.py  test_router.py  test_smoke.py  test_source_context.py  test_summarize_evaluation.py  test_triage.py
(+29 files in other folders)
