[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errpilot"
version = "0.1.0"
description = "CLI-first failure intake, triage, and structured agent handoff for AI-assisted debugging."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Yangchenxi Wu"}
]
dependencies = [
  "click>=8.1.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0"
]
gemini = [
  "google-genai>=1.0.0"
]

[project.scripts]
errpilot = "errpilot.cli:main"

[tool.setuptools.packages.find]
include = ["errpilot*"]
exclude = ["paper*", "docs*", "tests*", "examples*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
